--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
-  text-align: center;
+:root {
+    --H-font: 'Oswald', sans-serif;
+    --common-font: 'Ubuntu', sans-serif;
+    --light-weight: 300;
+    --regular-weight: 400;
+    --medium-weight: 500;
+    --bold-weight: 700;
+    --main-font-color: #FEFEFE;
+    --secondary-font-color: #CFCFCF;
+    --line-height1: 120%;
+    --line-height2: 150%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3, h4, h5 {
+    line-height: var(--line-height2);
+    font-family: var(--H-font);
+    color: var(--main-font-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p, input, button, header, footer {
+    line-height: var(--line-height1);
+    font-family: var(--common-font);
+    color: var(--secondary-font-color);
+    font-weight: var(--light-weight);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+h1, h2 {
+    font-weight: var(--bold-weight);
 }
 
-.App-link {
-  color: #61dafb;
+h3, h4 {
+    font-weight: var(--medium-weight);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h5{
+    font-weight: var(--regular-weight);
+}
+
+body{
+    background-color: #14213D;
 }
